syntax="proto3";

package Protocol; // 群聊

// 客户端发送
message C2GSendRequest{
	int64 from = 1; 	//发送者
	int64 group = 2; 	//目的群
	string content = 3; //消息内容
}

message C2GSendResponse {
	int64 msgid = 1;	//落地存储的消息id（针对此条信息）
	int64 timestamp = 2;//收到群聊信息的时间戳
}

// 服务器推送

message C2GPushRequest{
	int64 from = 1; 	//发送者
	int64 group = 2; 	//目的群
	string content = 3; //消息内容
	int64 msgid = 4; // 消息服务器对消息的编号（针对每个用户独立的一份id）
	int64 timestamp = 5;
}

message C2GPushResponse{
	int64 msgid = 1;
}